tests/baselines/reference/parserClassDeclaration1.errors.txt
==== tests/cases/compiler/parserClassDeclaration1.ts (2 errors) ====
    class C extends A extends B {
                      ~~~~~~~~~
!!! parserClassDeclaration1.ts(1,19): error TS1024: 'extends' clause already seen.
                    ~
!!! parserClassDeclaration1.ts(1,17): error TS2095: Cannot find name 'A'.
    }